Modernize DoubleMatrix1D
Change constructors to factories
Add more methods